# zmk-keyboard-tako

./: CMakeLists.txt  Kconfig  readme.md
boards/shields/tako/: tako.dtsi  tako.keymap  tako_left.conf  tako_left.overlay  tako_right.overlay
config/: west.yml
zephyr/: module.yml
